# TransLucid

./: .gitignore  CMakeLists.txt  ChangeLog  INSTALL-tl  Makefile.am  Makefile.pot  NUMBERS TODO  README  TODO  bootstrap  bootstrap.sh  config.h.cmake  configure.ac  tl.cbp  translucid.pc.in
src/basic/: CMakeLists.txt  Makefile.am  echo.cpp  fact1.cpp  single.cpp  typewriter.cpp
src/dirsystem/: CMakeLists.txt  Makefile.am  directory_system.cpp  directory_system.hpp  main.cpp
src/include/lexertl/: Makefile.am  bool.hpp  char_traits.hpp  compile_assert.hpp  debug.hpp  enums.hpp  file_shared_iterator.hpp  generate_cpp.hpp  generator.hpp  internals.hpp  is_same.hpp  lookup.hpp  rules.hpp  runtime_error.hpp  size_t.hpp  sm_traits.hpp  state_machine.hpp  string_token.hpp  utf_iterators.hpp
src/include/lexertl/containers/: Makefile.am  ptr_list.hpp  ptr_map.hpp  ptr_stack.hpp  ptr_vector.hpp
src/include/lexertl/parser/: Makefile.am  parser.hpp
src/include/lexertl/partition/: Makefile.am  charset.hpp  equivset.hpp
src/include/tl/: CMakeLists.txt  Makefile.am  arrayhd.hpp  assignment.hpp  ast-new.hpp  ast.hpp  ast_fwd.hpp  basefun.hpp  bestfit.hpp  builtin_types.hpp  cache.hpp  cacheio.hpp  charset.hpp  chi.hpp  collapse.hpp  compiled_classes.hpp  compiled_functors.hpp  constant.hpp  constant_parser.hpp  consthd.hpp  constws.hpp  container.hpp  context.hpp  datadef.hpp  dependencies.hpp  dimtranslator.hpp  equation.hpp  equation_parser.hpp  eval_workshops.hpp  evaluator.hpp  exception.hpp  expr.hpp  expr_compiler.hpp  expr_parser.hpp  fixed_indexes.hpp  footer.hpp  footer_type.hpp  free_variables.hpp  function.hpp  function_registry.hpp  (+64 more)
src/include/tl/detail/: CMakeLists.txt  Makefile.am  bestfit_detail.hpp  lexer.hpp  lexer_detail.hpp  types_detail.hpp
src/include/tl/hyperdatons/: CMakeLists.txt  Makefile.am  arrayhd.hpp  arrayhd_fwd.hpp  envhd.hpp  filehd.hpp  multi_arrayhd.hpp
src/include/tl/juice/: CMakeLists.txt  variant.hpp
src/include/tl/static/: CMakeLists.txt  Makefile.am  function.hpp  function_printer.hpp
src/include/tl/tyinf/: CMakeLists.txt  Makefile.am  constraint_graph.hpp  free_type_variable.hpp  garbage_collect.hpp  type.hpp  type_context.hpp  type_error.hpp  type_inference.hpp  type_rename.hpp  type_traverse.hpp  type_variable.hpp
src/include/tl/types/: CMakeLists.txt  Makefile.am  boolean.hpp  calc.hpp  char.hpp  demand.hpp  dimension.hpp  fixed_number.hpp  floatmp.hpp  function.hpp  hyperdatons.hpp  infinity.hpp  intension.hpp  intmp.hpp  numbers.hpp  numeric.hpp  range.hpp  region.hpp  special.hpp  string.hpp  tuple.hpp  type.hpp  union.hpp  uuid.hpp  workshop.hpp
src/interactive/: Makefile.am  README  interactive.cpp  interactive.hpp  main.cpp  parser.hpp
src/libs/interpreter/: CMakeLists.txt  Makefile.am  ast.cpp  bestfit.cpp  builtin_types.cpp  cache.cpp  compiled_functors.cpp  constant.cpp  consthd.cpp  container.cpp  dimtranslator.cpp  equation.cpp  evaluator.cpp  expr.cpp  expr_compiler.cpp  function.cpp  header_type.cpp  interpreter.cpp  interpreter_constant.cpp  interpreter_expr.cpp  interpreter_tuple.cpp  library.cpp  parser.cpp  printer.cpp  range.cpp  set_lazy_evaluator.cpp  set_types.cpp  translator.cpp  tuple_parser.cpp  types.cpp  utility.cpp
src/libs/string/: CMakeLists.txt  Makefile.am  libstring.cpp  libstring.hpp
src/libs/system/: CMakeLists.txt  Makefile.am  assignment.cpp  ast-new.cpp  ast.cpp  bestfit.cpp  builtin_types.cpp  cache.cpp  cacheio.cpp  charset.cpp  chi.cpp  compiled_functors.cpp  consthd.cpp  container.cpp  context.cpp  datadef.cpp  dependencies.cpp  dimtranslator.cpp  equation.cpp  equation_parser.cpp  eval_workshops.cpp  expr_compiler.cpp  expr_parser.cpp  free_variables.cpp  function.cpp  generic_walker.cpp  header.cpp  internal_strings.cpp  lexer.cpp  lexer_util.cpp  lexertl.cpp  library.cpp  line_tokenizer.cpp  opdef.cpp  parser-new.cpp  parser.cpp  printer.cpp  range.cpp  region.cpp  rename.cpp  (+16 more)
src/libs/system/generate-lexer/: Makefile.am
src/libs/system/hyperdatons/: arrayhd.cpp  envhd.cpp  filehd.cpp
src/libs/system/lex/: .gitignore  CMakeLists.txt  Makefile.am  lexertl.cpp
src/libs/system/po/: .gitignore  CMakeLists.txt  LINGUAS  Makevars  POTFILES.in  de.gmo  de.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  es.gmo  es.po  fr.gmo  fr.po  libtl.pot
src/libs/system/tl/: Makefile.am  builtin_ops.hpp  free_variables.hpp  generic_walker.hpp  gettext_internal.h  lexer_tokens.hpp  lexertl.hpp  parser.hpp
src/libs/system/tyinf/: constraint_graph.cpp  type.cpp  type_context.cpp  type_error.cpp  type_inference.cpp
src/libs/system/types/: function.cpp  function_type.cpp  integer.cpp  numbers.cpp  union.cpp
src/tests/: CMakeLists.txt  Makefile.am  cache.cpp  catch.cpp  catch.hpp  constant.cpp  equations.cpp  expressions.cpp  fact1.cpp  hyperdatons.cpp  iterator.cpp  iterinput.cpp  lexer.cpp  lexertl.cpp  line_tokenizer.cpp  parser.cpp  printing.cpp  runbinary.sh  runtest  system.cpp  transforms.cpp  tyinf.cpp  uuid.cpp  variant.cpp
src/tlcore/: CMakeLists.txt  Makefile.am  main.cpp  runtests.sh  tlcore-tests.sh  tlcore.cpp  tlcore.hpp
src/tltext/: CMakeLists.txt  Makefile.am  Y.tl  build_examples.sh  cxxopts.hpp  demandhd.cpp  demandhd.hpp  header-big.tl  header-tyinf.tl  header.tl  hello.tl  main.cpp  matrixweb.cpp  runtests.sh  tltext-tests.sh  tltext.cpp  tltext.hpp  tlweb.cpp  ty.tl  wilfred.cpp
src/tltext/caching/: 000_fib.in  000_fib.out  002_ifcache.in  002_ifcache.out  003_squares.in  003_squares.out
src/tltext/examples/: front  generate_html.sh  generate_subpage.sh  lists.in  lists.out  lists.todo  lucid  mdfold.in  mdfold.out  methodology
src/tltext/po/: .gitignore  LINGUAS  Makevars  POTFILES.in  de.gmo  de.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  es.gmo  es.po  fr.gmo  fr.po  tltext.pot
tests/: Makefile.am  autotestfix.sed  testsuite.at
tests/operations/: Makefile.am  clock  demands  eqns_0  header
tests/range/: clock  eqns_0  header  structure  thread_0
tests/sanity/: clock  eqns_0  thread_0
tests/simple/: clock  thread_0
(+288 files in other folders)
