enable_testing()

set(RUN ${CMAKE_SOURCE_DIR}/src/tests/runbinary.sh)
set(LIBDIR ${CMAKE_BINARY_DIR}/src/libs/int)
set(BINDIR .)

link_directories(${ICU_LIBRARY_DIRS})

add_definitions(${TLCFLAGS})

include_directories(${CMAKE_SOURCE_DIR}/src/libs/system)
#add_executable(expressions expressions.cpp)
#add_executable(equations equations.cpp)
#add_executable(printing printing.cpp)
#add_executable(iterator iterator.cpp)
#add_executable(hyperdatons hyperdatons.cpp)
#add_executable(iterinput iterinput.cpp)

add_executable(constant constant.cpp)
add_executable(variant variant.cpp)
add_executable(parser parser.cpp)
add_executable(transforms transforms.cpp)
add_executable(system system.cpp)
add_executable(tyinf tyinf.cpp)
add_executable(uuid uuid.cpp)
#add_executable(cache cache.cpp)

target_link_libraries(constant tlsystem ${TLLIBS})
target_link_libraries(system tlsystem ${TLLIBS})
target_link_libraries(parser tlsystem ${TLLIBS})
target_link_libraries(transforms tlsystem ${TLLIBS})
target_link_libraries(tyinf tlsystem ${TLLIBS})
target_link_libraries(variant ${TLLIBS})
target_link_libraries(uuid ${TLLIBS})
#target_link_libraries(cache tlsystem)

#add_test(iterator ./iterator)
#add_test(printing ./printing)
add_test(constant ./constant)
add_test(variant ./variant)
#add_test(cache ./cache)
add_test(parser ./parser)
add_test(transforms ./transforms)
add_test(system ./system)
#add_test(uuid ./uuid --collision-test 10000)
